product: preview section fix Firefox css "overflow" bug

--- a/src/components/pages/Product/Preview/styles.module.scss
+++ b/src/components/pages/Product/Preview/styles.module.scss
@@ -1,4 +1,5 @@
 .swiperContainer {
+  overflow: hidden;
   & ul {
     @include reset-list;
   }
